@@ -2,15 +2,21 @@ package org.brapi.schematools.cli;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.jayway.jsonpath.JsonPath;
 import graphql.schema.GraphQLSchema;
+import org.brapi.schematools.core.authorization.AuthorizationProvider;
+import org.brapi.schematools.core.authorization.BasicAuthorizationProvider;
+import org.brapi.schematools.core.authorization.BearerAuthorizationProvider;
+import org.brapi.schematools.core.authorization.NoAuthorizationProvider;
+import org.brapi.schematools.core.authorization.oauth.OpenIDToken;
+import org.brapi.schematools.core.authorization.oauth.SingleSignOn;
 import org.brapi.schematools.core.graphql.GraphQLSchemaParser;
 import org.brapi.schematools.core.markdown.GraphQLMarkdownGenerator;
-import org.brapi.schematools.core.markdown.GraphQLMarkdownGeneratorOptions;
+import org.brapi.schematools.core.markdown.options.GraphQLMarkdownGeneratorOptions;
 import org.brapi.schematools.core.response.Response;
 import picocli.CommandLine;
 
 import java.io.IOException;
-import java.io.PrintWriter;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.http.HttpClient;
@@ -18,6 +24,7 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -31,81 +38,95 @@ import static org.brapi.schematools.core.utils.StringUtils.readStringFromPath;
     name = "markdown", mixinStandardHelpOptions = true,
     description = "Generates Markdown descriptions from a GraphQL Schema"
 )
-public class MarkdownSubCommand implements Runnable {
-    private PrintWriter err;
+public class MarkdownSubCommand extends AbstractSubCommand {
+    private static final List<String> VALID_METHODS = Arrays.asList("GET", "POST");
 
     private static final InputFormat DEFAULT_FORMAT = InputFormat.GRAPHQL;
 
     @CommandLine.Parameters(index = "0", description = "The URL or file path of the schema, or the result of an introspection query specification. If the path is a valid URL an introspection query will be sent to it. if the path is a file it will be read, otherwise it will be treated as the result of an introspection query.")
     private String schemaPath;
 
-    @CommandLine.Parameters(index = "1",  description = "The path of directory for the generated result.")
+    @CommandLine.Option(names = {"-l", "--language"}, defaultValue = "GRAPHQL", fallbackValue = "GRAPHQL", description = "The format of the Input. Possible options are: ${COMPLETION-CANDIDATES}. Default is ${DEFAULT_FORMAT}")
+    private InputFormat inputFormat = DEFAULT_FORMAT;
+
+    @CommandLine.Option(names = {"-f", "--file"}, description = "The path of the output file or directory for the generated result. If omitted the output will be written to the standard out")
     private Path outputPath;
 
-    @CommandLine.Option(names = {"-l", "--language"}, defaultValue = "GRAPHQL", fallbackValue = "OPEN_API", description = "The format of the Input. Possible options are: ${COMPLETION-CANDIDATES}. Default is ${DEFAULT_FORMAT}")
-    private InputFormat inputFormat = DEFAULT_FORMAT;
+    @CommandLine.Option(names = {"-a", "--oauth"}, description = "The URL of the OAuth access token if used")
+    private String oauthURL;
 
     @CommandLine.Option(names = {"-o", "--options"}, description = "The path of the options file. If not provided the default options for the specified output format will be used.")
     private Path optionsPath;
 
-    @CommandLine.Option(names = {"-r", "--overwrite"}, description = "Overwrite the output file(s) if it already exists. True by default, if set to False the output wll not be over written.")
-    private boolean overwrite = true;
+    @CommandLine.Option(names = {"-u", "--username"}, description = "The username for authentication if required. If not provided the current system username is used.")
+    private String username = System.getProperty("user.name");
 
-    @CommandLine.Option(names = {"-x", "--throwExceptionOnFail"}, description = "Throw an exception on failure. False by default, if set to True if an exception is thrown when validation or generation fails.")
-    private boolean throwExceptionOnFail = false;
+    @CommandLine.Option(names = {"-p", "--password"}, interactive = true, arity = "0..1", description = "The password for the supplied username. Will fail if not logged in and the password is not provided. Providing the option without a value make the application as for a value.")
+    private String password;
 
-    @CommandLine.Option(names = {"-t", "--stackTrace"}, description = "If an error is recorded output the stack trace.")
-    private boolean stackTrace = false;
+    @CommandLine.Option(names = {"-c", "--clientId"}, description = "The client id for authentication if required.")
+    private String clientId;
+
+    @CommandLine.Option(names = {"-s", "--clientSecret"}, description = "The client secret for authentication if required.")
+    private String clientSecret;
+
+    @CommandLine.Option(names = {"-b", "--bearer"}, description = "The bearer token for authentication if required.")
+    private String bearer;
+
+    @CommandLine.Option(names = {"-m", "--method"}, description = "If the schema path is an URL provide the HTTP method. The default is GET.")
+    private String method;
+
+    @CommandLine.Option(names = {"-r", "--overwrite"}, description = "Overwrite the output file(s) if it already exists. True by default, if set to False the output wll not be over writen.")
+    private Boolean overwrite ;
 
     @Override
-    public void run() {
-        try {
-            err = new PrintWriter(System.err);
-
-            if (Objects.requireNonNull(inputFormat) == InputFormat.GRAPHQL) {
-                generateMarkdown();
-            }
-        } catch (Exception exception) {
-
-            String message = String.format("%s: %s", exception.getClass().getSimpleName(), exception.getMessage());
-            err.println(message);
-
-            if (stackTrace) {
-                exception.printStackTrace(err);
-            }
-
-            if (throwExceptionOnFail) {
-                throw new BrAPICommandException(message, exception);
-            }
-        } finally {
-            err.close();
+    public void execute() throws IOException {
+        if (Objects.requireNonNull(inputFormat) == InputFormat.GRAPHQL) {
+            generateMarkdown();
+        } else {
+            printError(String.format("Unsupported input format '%s'" , inputFormat));
         }
     }
 
-    private void generateMarkdown() {
-        try {
-            if (outputPath != null) {
-                if (Files.isRegularFile(outputPath)) {
-                    err.println("For Markdown generation the output path must be a directory");
+    private void generateMarkdown() throws IOException{
+        if (outputPath != null) {
+            if (Files.isRegularFile(outputPath)) {
+                printError("For Markdown generation the output path must be a directory");
+
+                return;
+            }
+
+            if (method != null) {
+                method = method.toUpperCase();
+                if (!VALID_METHODS.contains(method)) {
+                    printError(String.format("Unsupported method '%s'", method));
+
+                    return;
                 }
 
-                Files.createDirectories(outputPath);
-
-                GraphQLMarkdownGeneratorOptions options = GraphQLMarkdownGeneratorOptions.load().setOverwrite(overwrite);
-
-                GraphQLMarkdownGenerator markdownGenerator = GraphQLMarkdownGenerator
-                    .generator(outputPath).options(options);
-
-                readSchema(schemaPath, options)
-                    .mapResultToResponse(this::parseJsonSchema)
-                    .mapResultToResponse(markdownGenerator::generate)
-                    .onSuccessDoWithResult(this::outputMarkdownPaths)
-                    .onFailDoWithResponse(this::printMarkdownErrors);
             } else {
-                err.println("For Markdown generation the output directory must be provided");
+                method = "GET";
             }
-        } catch (IOException exception) {
-            err.println(exception.getMessage());
+
+            Files.createDirectories(outputPath);
+
+            GraphQLMarkdownGeneratorOptions options = optionsPath != null ?
+                GraphQLMarkdownGeneratorOptions.load(optionsPath) : GraphQLMarkdownGeneratorOptions.load();
+
+            if (overwrite != null) {
+                options.setOverwrite(overwrite);
+            }
+
+            GraphQLMarkdownGenerator markdownGenerator = GraphQLMarkdownGenerator
+                .generator(outputPath).options(options);
+
+            readSchema(schemaPath, options)
+                .mapResultToResponse(this::parseJsonSchema)
+                .mapResultToResponse(markdownGenerator::generate)
+                .onSuccessDoWithResult(this::outputMarkdownPaths)
+                .onFailDoWithResponse(this::printMarkdownErrors);
+        } else {
+            printError("For Markdown generation the output directory must be provided");
         }
     }
 
@@ -115,16 +136,15 @@ public class MarkdownSubCommand implements Runnable {
         try {
             return Response.success(parser.parseJsonSchema(schema));
         } catch (JsonProcessingException e) {
-            String message = String.format("Unable to parse schema from '%s'", schema);
-            err.println(message);
-            return Response.fail(Response.ErrorType.VALIDATION, message);
+            return Response.fail(Response.ErrorType.VALIDATION, String.format("Unable to parse schema from '%s'", schema));
         }
     }
 
     private Response<String> readSchema(String schema, GraphQLMarkdownGeneratorOptions options) throws IOException {
 
         if (schema.startsWith("http")) {
-            return queryForSchema(schema, options);
+            return authorisation()
+                .mapResultToResponse(authorizationProvider -> queryForSchema(authorizationProvider, schema, options));
         } else {
             Path path = Path.of(schema);
             if (Files.isRegularFile(path)) {
@@ -135,28 +155,78 @@ public class MarkdownSubCommand implements Runnable {
         }
     }
 
-    private Response<String> queryForSchema(String url, GraphQLMarkdownGeneratorOptions options) {
+    private Response<String> queryForSchema(AuthorizationProvider authorizationProvider, String url, GraphQLMarkdownGeneratorOptions options) {
 
         try {
-            HttpRequest request = HttpRequest.newBuilder()
+            HttpRequest.Builder builder = HttpRequest.newBuilder()
                 .uri(new URI(url))
-                .POST(HttpRequest.BodyPublishers.ofString(
-                    new ObjectMapper().writeValueAsString(Collections.singletonMap("query",options.getIntrospectionQuery()))))
-                .build();
+                .method(method, HttpRequest.BodyPublishers.ofString(
+                    new ObjectMapper().writeValueAsString(Collections.singletonMap("query",options.getIntrospectionQuery())))) ;
 
-            HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+            if (authorizationProvider.required()) {
+                authorizationProvider.getAuthorization().onSuccessDoWithResult(authorization -> builder.header("Authorization", authorization)) ;
+            }
+
+            HttpResponse<String> response = HttpClient.newHttpClient().send(builder.build(), HttpResponse.BodyHandlers.ofString());
 
             if (response.statusCode() == 200) {
-                return Response.success(response.body());
+                if (options.getIntrospectionQueryJsonPath() != null) {
+                    String schema = JsonPath.read(response.body(), options.getIntrospectionQueryJsonPath());
+
+                    if (schema == null || schema.isEmpty()) {
+                        return Response.fail(Response.ErrorType.VALIDATION,
+                            String.format("Unable to extract schema from '%s', using JSONPath, '%s'", response.body(), options.getIntrospectionQueryJsonPath()));
+                    }
+
+                    return Response.success(schema);
+
+                } else {
+                    return Response.success(response.body());
+                }
+
             } else {
-                String message = String.format("Unable to get schema from '%s', status code %d, '%s'", url, response.statusCode(), response.body());
-                err.println(message);
-                return Response.fail(Response.ErrorType.VALIDATION, message);
+                return Response.fail(Response.ErrorType.VALIDATION,
+                    String.format("Unable to get schema from '%s', status code %d, '%s'", url, response.statusCode(), response.body()));
             }
 
         } catch (IOException | URISyntaxException | InterruptedException exception) {
-            err.println(exception.getMessage());
+            printStackTrace(exception);
             return Response.fail(Response.ErrorType.VALIDATION, exception.getMessage());
+        }
+    }
+
+    private Response<AuthorizationProvider> authorisation() {
+        if (oauthURL != null) {
+            SingleSignOn sso = SingleSignOn.builder()
+                .url(oauthURL)
+                .clientId(clientId)
+                .username(username).build();
+
+            return sso.getToken()
+                .or(() -> login(sso))
+                .merge(() -> Response.success(sso));
+        } else if (password != null) {
+            return Response.success(BasicAuthorizationProvider.builder().username(username).password(password).build());
+        } else if (bearer != null) {
+            return Response.success(BearerAuthorizationProvider.builder().token(bearer).build());
+        } else {
+            return Response.success(new NoAuthorizationProvider());
+        }
+    }
+
+    private Response<OpenIDToken> login(SingleSignOn sso) {
+        if (password != null && clientSecret != null) {
+            return sso.loginWithPasswordAndClientId(password, clientSecret);
+        } else {
+            if (password != null) {
+                return sso.loginWithPassword(password);
+            } else {
+                if (clientSecret != null) {
+                    return sso.loginWithClientId(clientSecret);
+                } else {
+                    return Response.fail(Response.ErrorType.PERMISSION, String.format("Not logged in please provide password using option '-p' for user '%s' or client secret for client '%s'", username, clientId));
+                }
+            }
         }
     }
 
@@ -165,7 +235,7 @@ public class MarkdownSubCommand implements Runnable {
             System.out.println("Did not generate any markdown files");
         } else if (paths.size() == 1) {
             System.out.println("Generated '1' markdown file:");
-            System.out.println(paths.get(0).toString());
+            System.out.println(paths.getFirst().toString());
         } else {
             System.out.printf("Generated '%s' markdown files:%n", paths.size());
             paths.forEach(path -> System.out.println(path.toString()));
@@ -173,33 +243,10 @@ public class MarkdownSubCommand implements Runnable {
     }
 
     private void printMarkdownErrors(Response<List<Path>> response) {
-        String message;
         if (response.getAllErrors().size() == 1) {
-            err.println(message = "There was 1 error generating the Markdown");
+            printErrors("There was 1 error generating the Markdown", response.getAllErrors());
         } else {
-            err.println(message = String.format("There were %d errors generating the Markdown", response.getAllErrors().size()));
-            ;
+            printErrors(String.format("There were %d errors generating the Markdown", response.getAllErrors().size()), response.getAllErrors());
         }
-
-        response.getAllErrors().forEach(this::printError);
-
-        if (throwExceptionOnFail) {
-            throw new BrAPICommandException(message, response.getAllErrors());
-        }
-    }
-
-    private void printError(Response.Error error) {
-        switch (error.getType()) {
-
-            case VALIDATION -> {
-                err.print("Validation Error :");
-            }
-            case PERMISSION, OTHER -> {
-                err.print("Error :");
-            }
-        }
-        err.print('\t');
-
-        err.println(error.getMessage());
     }
 }
